
  [ Benjamin Drung ]
  * suspicious-source:
    - Add .icns and .java to extension whitelist.
    - Add image/vnd.adobe.photoshop to the mime-type whitelist.
  * data/debian.csv: Add wheezy and release date of squeeze.
  * *distro-info: Add a "created" column to the data.
  * wrap-and-sort: Wrap and sort Build-Conflicts too.
  * Move debian-keyring from Suggests to Recommends (LP: #717245).

  [ Stefano Rivera ]
  * debian/copyright:
    - Files is space-separated, not comma.
    - Bump Format revision.

  [ Kees Cook ]
  * ubuntutools/update_maintainer.py: do nothing if the rules file
    already manages XSBC-Original (e.g. python).
  * ubuntutools/test/test_update_maintainer.py: update test cases to
    handle checking for debian/rules.
  * mk-sbuild: work around apt's invocation of GPG needing root's
    .gnupg directory to already exist.

  [ Michael Bienia ]
  * Use the new web_link attribute of LP objects instead of our own
    translate_api_web() function.

 -- Benjamin Drung <bdrung@debian.org>  Sat, 12 Feb 2011 14:15:59 +0100

ubuntu-dev-tools (0.115) unstable; urgency=low

  [ Stefano Rivera ]
  * Catch DownloadErrors in ubuntutools.archive users. (LP: #708862)

  [ Scott Kitterman ]
  * Update requestsync to send to Launchpad's MX record instead of hard
    coding to the old MX (fiordland) (LP: #710925)
  * Recommend python-dns

 -- Benjamin Drung <bdrung@debian.org>  Tue, 01 Feb 2011 13:58:07 +0100

ubuntu-dev-tools (0.114) unstable; urgency=low

  [ Stefano Rivera ]
  * ubuntutools.archive: Handle source package in workdir correctly.
    Add regression tests. (LP: #706403)
  * syncpackage: Don't fakesync when we have a new orig tarball (LP: #707187)

  [ Dustin Kirkland ]
  * debian/control, debian/copyright, doc/errno.1, errno, setup.py:
    - purge the errno utility per request of the ubuntu-dev-tools
      maintainer;  errno now provided by the 'errno' package; (LP: #666540)

  [ Benjamin Drung ]