@@ -8,6 +8,9 @@ ubuntu-dev-tools (0.116) UNRELEASED; urgency=low
   * *distro-info: Add a "created" column to the data.
   * wrap-and-sort: Wrap and sort Build-Conflicts too.
   * Move debian-keyring from Suggests to Recommends (LP: #717245).
+  * ubuntutools/test/example_package.py: Use dpkg-source directly instead of
+    dpkg-buildpackage to avoid running fakeroot inside fakeroot which leads
+    to a FTBFS on natty.
 
   [ Stefano Rivera ]
   * debian/copyright:
@@ -26,7 +29,7 @@ ubuntu-dev-tools (0.116) UNRELEASED; urgency=low
   * Use the new web_link attribute of LP objects instead of our own
     translate_api_web() function.
 
- -- Benjamin Drung <bdrung@debian.org>  Sat, 12 Feb 2011 14:15:59 +0100
+ -- Benjamin Drung <bdrung@debian.org>  Sat, 12 Feb 2011 16:35:33 +0100
 
 ubuntu-dev-tools (0.115) unstable; urgency=low
 
